--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <head>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
+<style>
+.label {
+	font-size: 0.5rem;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+		
+</style>
 <body>
 	
 	<script src="oggi.js"></script>
