--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
+<style>
+.label {
+	font-size: 8px;
+}
+</style>
 <body>
 	
 	<script src="oggi.js"></script>
