--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <style>
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 .label {
 	font-size: 0.5rem;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.axis .tick line {
+	stroke: rgba(0,0,0,.3);
+	stroke-width: 0.3;
 }
 		
 </style>
