--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <html>
 <head>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <style>
+body {
+	font-family: 'Rubik', sans-serif;
+}
+
 .label {
+	font-size: 10px;
+}
+
+.year {
 	font-size: 8px;
 }
 </style>
 <body>
-	
+	<h1>Honey production in the United States</h1>
+	<h3>from 1998 to 2012</h3>
 	<script src="oggi.js"></script>
 </body>
 </html>
